--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3"
+    "@types/react-router-dom": "^5.1.3",
+    "@types/redux-form": "^8.2.2"
   }
 }
